# shopping-agent

./: CLAUDE.md  README.md  agent.py  docker-compose.yml  inventory.py  main.py  models.py  pyproject.toml
data/: inventory.json
src/: agent.py  inventory.py
tests/: test_agent.py  test_inventory.py
